# Click-Cartel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
click-cartel-discord-bot/: README.md  clickcartel.db  clickcartel.db-shm  clickcartel.db-wal  pyproject.toml  requirements.txt
click-cartel-discord-bot/data/: listings.db  posted_links.json
click-cartel-discord-bot/scripts/: run.sh
click-cartel-discord-bot/src/: bot.py  clickcartel.db-shm  clickcartel.db-wal  config.py
click-cartel-discord-bot/src/cogs/: admin.py  health.py  listings.py  rules.py  saved_searches.py
click-cartel-discord-bot/src/models/: listing.py
click-cartel-discord-bot/src/scrapers/: __init__.py  base.py  focus_groups.py  respondent.py  site_a.py  site_b.py  user_interviews.py
click-cartel-discord-bot/src/services/: db.py  notifier.py  scheduler.py  scraper_manager.py
click-cartel-discord-bot/src/utils/: http.py  parser.py
click-cartel-discord-bot/tests/: test_cogs.py  test_scrapers.py
