[tool.poetry]
name = "click-cartel-discord-bot"
version = "0.1.0"
description = "A Discord bot that scrapes real-time paid research and focus group listings."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
discord.py = "^2.0.0"
aiohttp = "^3.8.0"
beautifulsoup4 = "^4.10.0"
aiosqlite = "^0.17.0"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"